UC1 - Validating username

--- a/forms.html
+++ b/forms.html
@@ -38,6 +38,10 @@
         <div><button type="submit">Submit</button></div>
     </form>
     <script>
+        // As a User need to enter a valid First
+Name
+        // UC1 - Validating Name - Starting letter should be Capital. 
+
         const name = document.getElementById("name");
         let textError = document.querySelector(".text-error");
         name.addEventListener("input",function(){
