--- a/forms.html
+++ b/forms.html
@@ -15,7 +15,8 @@
         </div>
 
         <div><label for="password">Enter the Password : </label>
-        <input type="password" id="password"></div>
+        <input type="password" id="password" name="password">
+        <error-output class="password-error" for="password"></error-output></div>
 
         <div><label for="email">Enter your EmailID : </label>
         <input type="email" id="email">
@@ -86,6 +87,21 @@
                 mobileError.textContent = "Incorrect Mobile Format";
             }
         })
+
+        // UC4 - Validating the password with min 8 characters
+
+        const password = document.querySelector("#password");
+        const passwordError = document.querySelector(".password-error");
+        password.addEventListener("input",function(){
+            let passwordFormat = /^.{8,}$/;
+            if(passwordFormat.test(password.value)){
+                passwordError.textContent = "";
+            }
+            else{
+                passwordError.textContent = "Password Should be Minimum 8 characters";
+            }
+        })
+
 
         const salary = document.querySelector("#salary");
         let output = document.querySelector(".salary-output");
